samples/_failures_safe/1761402771_0abcbd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a5e1589b.c: In function ‘dijkstra_shortest_path’:
./samples/SAFE/__tmp_a5e1589b.c:164:12: error: missing terminating " character
  164 |     printf("Shortest distance
      |            ^~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_a5e1589b.c:164:5: error: expected expression at end of input
  164 |     printf("Shortest distance
      |     ^~~~~~
./samples/SAFE/__tmp_a5e1589b.c:164:5: error: expected declaration or statement at end of input
